--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,3 @@
 <b>LocalRepo</b>
 <p>Hello this is my first file for  new Repository LocalRepo</p>
-<p>This is new feature</p>
+<p>This is new feature (button)</p>
